[tool.setuptools]
package-dir = {"" = "core"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["core"]
include = [
    "dbt",
    "dbt.*",
]

[project]
name = "dbt-core"
version = "1.11.0b4"
description = "With dbt, data analysts and engineers can build analytics the way engineers build applications."
readme = "core/README.md"
requires-python = ">=3.10"
license = { file = "License.md" }
keywords = []
authors = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
maintainers = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "agate>=1.7.0,<1.10",
    "Jinja2>=3.1.3,<4",
    "mashumaro[msgpack]>=3.9,<3.15",
    "click>=8.0.2,<9.0",
    "jsonschema>=4.19.1,<5.0",
    "networkx>=2.3,<4.0",
    "protobuf>=6.0,<7.0",
    "requests<3.0.0",
    "snowplow-tracker>=1.0.2,<2.0",
    "pathspec>=0.9,<0.13",
    "sqlparse>=0.5.0,<0.6.0",
    "dbt-extractor>=0.5.0,<=0.6",
    "dbt-semantic-interfaces>=0.10.0,<0.11",
    "dbt-common>=1.27.0,<2.0",
    "dbt-adapters>=1.15.5,<2.0",
    "dbt-protos>=1.0.375,<2.0",
    "pydantic<3",
    "packaging>20.9",
    "pytz>=2015.7",
    "pyyaml>=6.0",
    "daff>=1.3.46",
    "typing-extensions>=4.4",
]

[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-core"
Repository = "https://github.com/dbt-labs/dbt-core.git"
Issues = "https://github.com/dbt-labs/dbt-core/issues"
Changelog = "https://github.com/dbt-labs/dbt-core/blob/main/CHANGELOG.md"

[project.scripts]
dbt = "dbt.cli.main:cli"

[project.optional-dependencies]
dev = [
    "dbt-adapters @ git+https://github.com/dbt-labs/dbt-adapters.git@main#subdirectory=dbt-adapters",
    "dbt-tests-adapter @ git+https://github.com/dbt-labs/dbt-adapters.git@main#subdirectory=dbt-tests-adapter",
    "dbt-common @ git+https://github.com/dbt-labs/dbt-common.git@main",
    "dbt-postgres @ git+https://github.com/dbt-labs/dbt-adapters.git@main#subdirectory=dbt-postgres",
    # black must match what's in .pre-commit-config.yaml to be sure local env matches CI
    "black==24.3.0",
    "bumpversion",
    "ddtrace==2.21.3",
    "docutils",
    # flake8 must match what's in .pre-commit-config.yaml to be sure local env matches CI
    "flake8==4.0.1",
    "flaky",
    "freezegun>=1.5.1",
    "hypothesis",
    "ipdb",
    # isort must match what's in .pre-commit-config.yaml to be sure local env matches CI
    "isort==5.13.2",
    # mypy must match what's in .pre-commit-config.yaml to be sure local env matches CI
    "mypy==1.4.1",
    "build",
    "pip-tools",
    "pre-commit",
    "protobuf>=6.0,<7.0",
    "pytest>=7.4,<8.0",
    "pytest-cov",
    "pytest-csv>=3.0,<4.0",
    "pytest-dotenv",
    "pytest-mock",
    "pytest-split",
    "pytest-xdist",
    "sphinx",
    "tox>=3.13",
    "types-docutils",
    "types-PyYAML",
    "types-Jinja2",
    "types-jsonschema",
    "types-mock",
    "types-protobuf>=5.0,<6.0",
    "types-python-dateutil",
    "types-pytz",
    "types-requests",
    "types-setuptools",
    "mocker",
]

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.mypy]
# TODO: widen range of files as we fix issues
files = 'core/dbt'
mypy_path = "third-party-stubs/"
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "dbtlabs.*",
    "dbt_semantic_interfaces.*",
    "dbt_common.*",
    "click.parser",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
# Mirror legacy mypy behaviour by excluding modules previously unchecked in the pre-commit mirror environment.
module = [
    "dbt.events.types",
    "dbt.events.core_types_pb2",
    "dbt.jsonschemas.jsonschemas",
    "dbt.cli.option_types",
    "dbt.cli.options",
    "dbt.cli.flags",
    "dbt.utils.utils",
    "dbt.env_vars",
    "dbt.context.providers",
    "dbt.artifacts.resources.v1.semantic_layer_components",
]
ignore_errors = true

[tool.black]
line-length = 99
target-version = ['py38']
