[project]
name = "dbt-core"
dynamic = ["version"]
description = "With dbt, data analysts and engineers can build analytics the way engineers build applications."
authors = [{ name = "dbt Labs", email = "info@dbtlabs.com" }]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Rust",
  "Development Status :: 3 - Alpha",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
]

[project.urls]
Homepage = "https://getdbt.com"
Repository = "https://github.com/dbt-labs/dbt-core"
Issues = "https://github.com/dbt-labs/dbt-core/issues"
Documentation = "https://docs.getdbt.com"
