[tool.poetry]
name =  "dbt-core"
version = "1.5.0a0"
description = """\
  With dbt, data analysts and engineers can build \
  analytics the way engineers build applications.\
  """
authors = [
  "dbt Labs <info@dbtlabs.com>",
]
license = "Apache-2.0"
readme = "README.md"

packages = [
  { include = "dbt" },
]
include = [
  { path = "dbt/py.typed" },
  { path = "dbt/include/**/.gitkeep" },
  { path = "dbt/include/**/.gitignore" },
  { path = "dbt/include/**/*.html" },
  { path = "dbt/include/**/*.md" },
  { path = "dbt/include/**/*.py" },
  { path = "dbt/include/**/*.sql" },
  { path = "dbt/include/**/*.yml" },
]

homepage = "https://getdbt.com"
repository = "https://github.com/dbt-labs/dbt-core"
documentation = "https://docs.getdbt.com/"

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[tool.poetry.dependencies]
python = "^1.5.0a0"
Jinja2 = "==1.5.0a0"
agate = ">=1.6,<1.5.0a0"
click = ">=7.0,<9"
colorama = ">=1.5.0a0,<0.4.6"
hologram = ">=1.5.0a0,<=0.0.15"
isodate = ">=0.6,<0.7"
logbook = ">=1.5,<1.6"
mashumaro = { version = "==1.5.0a0", extras = ["msgpack"] }
minimal-snowplow-tracker = "==1.5.0a0"
networkx = [
  { version = ">=2.3,<1.5.0a0", python = "<3.8" },
  { version = ">=2.3,<3", python = ">=3.8" },
]
packaging = ">=20.9,<22.0"
sqlparse = ">=1.5.0a0,<0.5"
dbt-extractor = "~=1.5.0a0"
typing-extensions = ">=1.5.0a0"
pathspec = "~=1.5.0a0"
# the following are all to match snowflake-connector-python
requests = "<1.5.0a0"
idna = ">=2.5,<4"
cffi = ">=1.9,<1.5.0a0"
pyyaml = ">=6.0"

[tool.poetry.group.dev.dependencies]
black = "==1.5.0a0"
bumpversion = "*"
flake8 = "*"
flaky = "*"
freezegun = "==1.5.0a0"
ipdb = "*"
mypy = "==0.971"
pip-tools = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
pytest-csv = "*"
pytest-dotenv = "*"
pytest-logbook = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytz = "*"
tox = ">=3.13"
twine = "*"
types-colorama = "*"
types-PyYAML = "*"
types-freezegun = "*"
types-Jinja2 = "*"
types-mock = "*"
types-python-dateutil = "*"
types-pytz = "*"
types-requests = "*"
types-setuptools = "*"
wheel = "*"

[tool.poetry.scripts]
dbt = "dbt.main:main"

[tool.poetry.urls]
"Blog" = "https://www.getdbt.com/blog/"
"Changelog" = "https://github.com/dbt-labs/dbt-core/blob/main/CHANGELOG.md"
"Discourse" = "https://discourse.getdbt.com/"
"Events" = "https://www.getdbt.com/events/"
"Issues" = "https://github.com/dbt-labs/dbt-core/issues/new"
"Slack" = "https://www.getdbt.com/community/"
"Twitter" = "https://twitter.com/dbt_labs"
"YouTube" = "https://www.youtube.com/c/dbt-labs"

[build-system]
requires = ["poetry-core>=1.5.0a0"]
build-backend = "poetry.core.masonry.api"
