
[project]
name = "dbt-core"
version = "1.12.0a1"
description = "With dbt, data analysts and engineers can build analytics the way engineers build applications."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["License.md"]  # License.md copied to core/ by build script even though it lives at the root by convention
keywords = []
authors = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
maintainers = [
    { name = "dbt Labs", email = "info@dbtlabs.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    # ----
    # dbt-core uses these packages deeply, throughout the codebase, and there have been breaking changes in past patch releases (even though these are major-version-one).
    # Pin to the patch or minor version, and bump in each new minor version of dbt-core.
    "agate>=1.7.0,<1.10",
    "Jinja2>=3.1.3,<4",
    "mashumaro[msgpack]>=3.9,<3.15",
    # ----
    # dbt-core uses these packages in standard ways. Pin to the major version, and check compatibility
    # with major versions in each new minor version of dbt-core.
    "click>=8.0.2,<9.0",
    "jsonschema>=4.19.1,<5.0",
    "networkx>=2.3,<4.0",
    "protobuf>=6.0,<7.0",
    "requests<3.0.0",  # should match dbt-common
    "snowplow-tracker>=1.0.2,<2.0",
    # ----
    # These packages are major-version-0. Keep upper bounds on upcoming minor versions (which could have breaking changes)
    # and check compatibility / bump in each new minor version of dbt-core.
    "pathspec>=0.9,<0.13",
    "sqlparse>=0.5.0,<0.6.0",
    # ----
    # These are major-version-0 packages also maintained by dbt-labs.
    # Accept patches but avoid automatically updating past a set minor version range.
    "dbt-extractor>=0.5.0,<=0.6",
    "dbt-semantic-interfaces>=0.9.0,<0.10",
    # Minor versions for these are expected to be backwards-compatible
    "dbt-common>=1.27.0,<2.0",
    "dbt-adapters>=1.15.5,<2.0",
    "dbt-protos>=1.0.397,<2.0",
    "pydantic<3",
    # ----
    # Expect compatibility with all new versions of these packages, so lower bounds only.
    "packaging>20.9",
    "pytz>=2015.7",
    "pyyaml>=6.0",
    "daff>=1.3.46",
    "typing-extensions>=4.4",
]

[project.urls]
Homepage = "https://github.com/dbt-labs/dbt-core"
Repository = "https://github.com/dbt-labs/dbt-core.git"
Issues = "https://github.com/dbt-labs/dbt-core/issues"
Changelog = "https://github.com/dbt-labs/dbt-core/blob/main/CHANGELOG.md"

[project.scripts]
dbt = "dbt.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbt"]
only-packages = true
artifacts = [
    "dbt/include/**/*",
    "dbt/task/docs/**/*.html",
    "dbt/jsonschemas/**/*.json",
    "dbt/py.typed",
]

[tool.hatch.build.targets.sdist]
include = [
    "/dbt",
    "/README.md",
    "/License.md",
]

[tool.hatch.build.targets.sdist.force-include]
"dbt/task/docs/index.html" = "dbt/task/docs/index.html"

[tool.hatch.envs.default]
dependencies = [
    "pre-commit~=3.7.0",
    "pytest>=7.0,<8.0",
    "pytest-xdist~=3.6",
    "pytest-csv~=3.0",
    "pytest-logbook~=1.2",
    "logbook<1.9",
    "mypy>=1.9,<2.0",
    "flake8>=6.0,<7.0",
    "black>=24.3,<25.0",
    "tox~=4.16",
]

[tool.hatch.envs.default.scripts]
# Setup commands
dev = [
    "pip install -r ../dev-requirements.txt -r ../editable-requirements.txt",
    "pre-commit install",
]
dev-req = "pip install -r ../dev-requirements.txt -r ../editable-requirements.txt"
setup = "pre-commit install"

# Linting commands
lint = [
    "pre-commit run flake8-check --hook-stage manual --all-files",
    "pre-commit run mypy-check --hook-stage manual --all-files",
]
flake8 = "pre-commit run flake8-check --hook-stage manual --all-files"
mypy = "pre-commit run mypy-check --hook-stage manual --all-files"
black = "pre-commit run black-check --hook-stage manual --all-files"
check-all = "pre-commit run --all-files --show-diff-on-failure"

# Testing commands
unit = "tox -e unit"
test = [
    "tox -e unit",
    "pre-commit run black-check --hook-stage manual --all-files",
    "pre-commit run flake8-check --hook-stage manual --all-files",
    "pre-commit run mypy-check --hook-stage manual --all-files",
]
integration = "tox -e py-integration -- -nauto"
integration-fail-fast = "tox -e py-integration -- -x -nauto"

# Setup commands
setup-db = [
    "docker compose up -d database",
    "bash ../test/setup_db.sh",
]

# Utility commands
clean = [
    "rm -f .coverage",
    "rm -f .coverage.*",
    "rm -rf .eggs/",
    "rm -rf .tox/",
    "rm -rf build/",
    "rm -rf dbt.egg-info/",
    "rm -f dbt_project.yml",
    "rm -rf dist/",
    "find . -type f -name '*.pyc' -delete",
    "find . -type d -name __pycache__ -exec rm -rf {} +",
]
json-schema = "python ../scripts/collect-artifact-schema.py --path ../schemas"

[tool.hatch.envs.build]
detached = true
dependencies = [
    "wheel",
    "twine",
    "check-wheel-contents",
]

[tool.hatch.envs.build.scripts]
check-wheel = [
    "twine check dist/*",
    "pip install --force-reinstall dist/*.whl",
]

[tool.hatch.envs.ci]
dependencies = [
    "pytest>=7.0,<8.0",
    "pytest-xdist~=3.6",
]

[tool.hatch.envs.ci.scripts]
unit-tests = "python -m pytest tests/unit"
integration-tests = "python -m pytest tests/functional"

[tool.hatch.envs.cd]
dependencies = [
    "pytest>=7.0,<8.0",
    "pytest-xdist~=3.6",
]

[tool.hatch.envs.cd.scripts]
unit-tests = "python -m pytest tests/unit"
integration-tests = "python -m pytest tests/functional"
