[package]
name = "dbt-classification-types"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
im = { workspace = true }
rust-embed = { workspace = true }
serde = { workspace = true }

dbt-fusion-workspace-hack = { version = "0.1" }

[lib]
name = "dbt_classification_types"
path = "src/lib.rs"
doctest = false
