[package]
name = "dbt-metricflow-sidecar"
version.workspace = true
homepage.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
dbt-common = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

[lib]
name = "dbt_metricflow_sidecar"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "fake_mf_entry"
path = "tests/fixtures/fake_mf_entry.rs"
