[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "dbt-python"
version.workspace = true

[lib]
# maturin turns this into dbt/_core.abi3.so (stable ABI, see abi3-py310 below)
# so `from dbt._core import dbtRunner` works alongside python/dbt/runner.py
name = "dbt_core_pyo3"
crate-type = ["cdylib"]

[dependencies]
dbt-base = { workspace = true }
dbt-clap-core = { workspace = true }
dbt-common = { workspace = true }
dbt-features = { workspace = true }
dbt-fusion-workspace-hack = { version = "0.1" }
dbt-main = { workspace = true }
dbt-schemas = { workspace = true }
# abi3-py310: build a single stable-ABI wheel per platform that works on
# CPython 3.10+, instead of one wheel per interpreter version.
pyo3 = { workspace = true, features = ["abi3-py310"] }
pythonize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
